[package]
name = "windwaker"
version = "0.1.0"
edition = "2021"
authors = ["Madison Barry <madison.barry@hey.com>"]
readme = "README.md"
license = "MIT"
description = "A rust library that adds types to make working with Wind Waker in Dolphin a breeze."
repository = "https://github.com/TBPixel/windwaker-rs"

[dependencies]
dolphin-memory = "0.2.2"
serde = { version = "1", features = ["derive"] }
bit_field = "0.10.1"

[lib]
name = "windwaker"
path = "src/lib.rs"
